# UnBeatables_Simulation

./: .gitignore  README.md  run-simulation.py
Camera-Simulation/: put-image-tests.py
Cpp-Scripts/: CMakeLists.txt  log.txt  qiproject.xml  regex-codes.txt  vrepsimulation.cpp  vrepsimulation.h  vrepsimulationmain.cpp
Scripts/: manage_joints.py  put_image.py  single_nao_control.py  teste  vrep-opencv-test.py
python-bluezro/: main.py  main.sh  remote-api-exemple.py
